# cgentest

./: .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.am  NEWS  README  README.md  cgentest.c  cgentest.h  cgentest_new.c  cli.c  cli.h  configure.ac  ctags_helper.c  ctags_helper.h  local_limit.h  logger.c  logger.h  main.c  mapper.c  mapper.h  template  util.c
data/: template
extractor/: Makefile  lexer.c  lexer.h  token.h  trie.c  trie.h  util.c  util.h
libs/: README.md
libs/mustach/: mustach.h
src/: Makefile.am  cgentest.c  cgentest.h  cgentest_new.c  cli.c  cli.h  ctags_helper.c  ctags_helper.h  entity.h  local_limit.h  logger.c  logger.h  main.c  mapper.c  mapper.h  parser.c  parser.h  util.c  util.h  writer.h  writer_cjson.c  writer_jansson.c  writer_jsonc.c
tests/: Makefile.am  package.m4  testsuite  testsuite.at
tests/fixtures/: help_text  multiple_parameters  multiple_parameters.c  multiple_parameters_enum  multiple_parameters_enum.c  multiple_parameters_primitive  multiple_parameters_primitive.c  multiple_parameters_struct  multiple_parameters_struct.c  multiple_parameters_with_variadic  multiple_parameters_with_variadic.c  no_parameters  no_parameters.c  no_parameters_enum  no_parameters_enum.c  no_parameters_primitive  no_parameters_primitive.c  no_parameters_struct  no_parameters_struct.c  single_parameter  single_parameter.c  single_parameter_enum  single_parameter_enum.c  single_parameter_primitive  single_parameter_primitive.c  single_parameter_struct  single_parameter_struct.c  util_read_test
tests/integrations/: Makefile.am  integrations.at
tests/suites/: Makefile.am  cgentest_test.c  helper.c  logger_test.c  parser_test.c  suites.at  template  util.at  util_test.c
tests/suites/mocks/: logger.c  parser.c  util.c  writer.c
